--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "next lint && npx prettier . --write"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
